<?xml version="1.0" encoding="utf-8"?>
<androidx.percentlayout.widget.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:orientation="horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    >


    <androidx.percentlayout.widget.PercentRelativeLayout
        app:layout_widthPercent="20%"
        app:layout_heightPercent="100%"
        android:id="@+id/C1"
        android:orientation="vertical" 
        android:layout_height="300dp">

        <TextView
            android:text="Si"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/si"
            android:onClick="si"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/green"
            />
        <TextView
            android:text="Min"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/minimum"
            android:onClick="minimum"
            android:layout_below="@id/si"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/green"
            />
        <TextView
            android:text="Max"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/maximum"
            android:onClick="maximum"
            android:layout_width="match_parent"
            android:layout_below="@id/minimum"
            app:layout_heightPercent="20%"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/green"
            />

        <TextView
            android:text="Swap"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:id="@+id/swap"
            android:onClick="swap"
            android:layout_below="@id/maximum"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_height="wrap_content"
            android:background="@color/green"
            />




        <TextView
            android:text="C"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/drop"
            android:onClick="drop"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_below="@id/swap"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/green"
        />

    </androidx.percentlayout.widget.PercentRelativeLayout>

    <androidx.percentlayout.widget.PercentRelativeLayout
        app:layout_widthPercent="20%"
        app:layout_heightPercent="100%"
        android:id="@+id/C2"
        android:orientation="vertical"
        android:layout_toRightOf="@id/C1"
        >
        />
        <TextView
            android:text="x²"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/power"
            android:onClick="power"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/green"
            />
        <TextView
            android:text="@string/_7"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/k7"
            android:tag="7"
            android:onClick="digit"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_below="@id/power"
            android:layout_height="wrap_content"
        />
        <TextView
            android:text="@string/_4"
            android:gravity="center"
            android:textSize="30sp"
            android:id="@+id/k4"
            android:tag="4"
            android:onClick="digit"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_below="@id/k7"
            android:layout_height="wrap_content"
        />
        <TextView
            android:text="@string/_1"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/k1"
            android:tag="1"
            android:onClick="digit"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_below="@id/k4"
            android:layout_height="wrap_content"
        />
        <TextView
            android:text="@string/del"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/delete"
            android:onClick="delete"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_below="@id/k1"
            android:layout_height="wrap_content"
        />
    </androidx.percentlayout.widget.PercentRelativeLayout>

    <androidx.percentlayout.widget.PercentRelativeLayout
        app:layout_widthPercent="20%"
        app:layout_heightPercent="100%"
        android:id="@+id/C3"
        android:orientation="vertical"
        android:layout_toRightOf="@id/C2"
    >
        <TextView
            android:text="¹/x"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/reciprocal"
            android:onClick="reciprocal"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/green"
        />
        <TextView
            android:text="@string/_8"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/k8"
            android:tag="8"
            android:onClick="digit"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_below="@id/reciprocal"
            android:layout_height="wrap_content"
        />
        <TextView
            android:text="@string/_5"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/k5"
            android:tag="5"
            android:onClick="digit"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_below="@id/k8"
            android:layout_height="wrap_content"
        />
        <TextView
            android:text="@string/_2"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/k2"
            android:tag="2"
            android:gravity="center"
            android:onClick="digit"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_below="@id/k5"
            android:layout_height="wrap_content"
        />
        <TextView
            android:text="@string/_0"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/k0"
            android:tag="0"
            android:onClick="digit"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_below="@id/k2"
            android:layout_height="wrap_content"
        />
    </androidx.percentlayout.widget.PercentRelativeLayout>

    <androidx.percentlayout.widget.PercentRelativeLayout
        app:layout_widthPercent="20%"
        app:layout_heightPercent="100%"
        android:id="@+id/C4"
        android:orientation="vertical"
        android:layout_toRightOf="@id/C3"
    >
        <TextView
            android:text="√"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/sqrt"
            android:onClick="sqrt"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/green"
        />
        <TextView
            android:text="@string/_9"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/k9"
            android:tag="9"
            android:onClick="digit"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_below="@id/sqrt"
            android:layout_height="wrap_content"
        />
        <TextView
            android:text="@string/_6"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/k6"
            android:tag="6"
            android:onClick="digit"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_below="@id/k9"
            android:layout_height="wrap_content"
        />
        <TextView
            android:text="@string/_3"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/k3"
            android:tag="3"
            android:onClick="digit"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_below="@id/k6"
            android:layout_height="wrap_content"
        />
        <TextView
            android:text="@string/dot"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/dot"
            android:onClick="dot"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_below="@id/k3"
            android:layout_height="wrap_content"
        />
    </androidx.percentlayout.widget.PercentRelativeLayout>

    <androidx.percentlayout.widget.PercentRelativeLayout
        app:layout_widthPercent="20%"
        app:layout_heightPercent="100%"
        android:id="@+id/C5"
        android:orientation="vertical"
        android:layout_toRightOf="@id/C4"
    >

        <TextView
            android:text="/"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/divide"
            android:onClick="divide"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_below="@id/power"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/green"
        />
        <TextView
            android:text="x"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/multiply"
            android:onClick="multiply"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_below="@id/divide"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/green"
        />
        <TextView
            android:text="-"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/subtract"
            android:onClick="subtract"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_below="@id/multiply"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/green"
        />
        <TextView
            android:text="+"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/add"
            android:onClick="add"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_below="@id/subtract"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/green"
        />

        <TextView
            android:text="Enter"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:id="@+id/enter"
            android:onClick="enter"
            android:layout_below="@id/add"
            android:scaleType="fitXY"

            />

    </androidx.percentlayout.widget.PercentRelativeLayout>

    <androidx.percentlayout.widget.PercentRelativeLayout
        app:layout_widthPercent="20%"
        app:layout_heightPercent="100%"
        android:id="@+id/C5"
        android:orientation="vertical"
        android:layout_toRightOf="@id/C4"
        >

        <TextView
            android:text="/"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/divide"
            android:onClick="divide"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_below="@id/power"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/green"
            />
        <TextView
            android:text="x"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/multiply"
            android:onClick="multiply"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_below="@id/divide"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/green"
            />
        <TextView
            android:text="-"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/subtract"
            android:onClick="subtract"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_below="@id/multiply"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/green"
            />
        <TextView
            android:text="+"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:id="@+id/add"
            android:onClick="add"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_below="@id/subtract"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/green"
            />

        <TextView
            android:text="ENTER"
            android:gravity="center"
            android:textSize="23sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            app:layout_heightPercent="20%"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:id="@+id/enter"
            android:onClick="enter"
            android:layout_below="@id/add"
            android:scaleType="fitXY"

            />

    </androidx.percentlayout.widget.PercentRelativeLayout>

</androidx.percentlayout.widget.PercentRelativeLayout>